<resources>
    <string name="app_name">부탁해약</string>
    <string name="title_home">홈</string>
    <string name="title_note">노트</string>
    <string name="title_schedule">스케줄</string>
    <string name="title_user">마이페이지</string>
    <string name="title">부탁해약</string>

    <string name="phone_number">전화번호</string>
    <string name="address">주소</string>
    <string name="medicine_name">약 이름</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="check">확인</string>
    <string name="next">다음</string>

    <string name="btn_call">전화</string>
    <string name="btn_nav">길찾기</string>
    <!-- FireBase -->
    <string name="set">set</string>

    <!-- SignIn -->
    <string name="input_id">아이디를 입력해 주세요</string>
    <string name="input_pw">비밀번호를 입력해 주세요</string>
    <string name="input_name">이름을 입력해 주세요</string>
    <string name="input_age">나이를 입력해 주세요</string>
    <string name="input_photo">사진 설정하세요</string>

    <string name="autologin">자동 로그인</string>
    <string name="Unsubscribing">회원탈퇴</string>
    <string name="name">내 이름</string>
    <string name="login_info">로그인 정보</string>
    <string name="if_login">로그인하시겠습니까?</string>

    <string name="BreakfastLunchDinner">아침/점심/저녁</string>
    <string name="Services">서비스 이용 약관</string>
    <string name="open_API">오픈 소스</string>
    <string name="version">버전</string>
    <string name="version_num">2.0</string>

    <string name="set_time">시간 설정</string>
    <string name="breakfast">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>

    <string name="today_medicine">오늘 먹어야 할 약</string>
    <string name="neighbor">내 지인</string>
    <string name="my_medicine">복용 중인 약</string>

    <string name="title_take">take</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_today_guide_title">먹어야 할 약을 아직 지정하지 않으셨습니다!</string>
    <string name="no_today_guide_body">• 알람을 추가하여 복용 중인 약을 관리해보아요!\n• 복용 중인 약마다 최대 5개의 알림을 설정할 수 있어요!</string>
    <string name="no_today_guide_btn">알림 추가하기</string>
    <string name="no_my_medicine_str">현재 복용 중인 약이 없습니다.</string>

    <!-- Bottom Sheet -->
    <string name="place_name">약국 이름</string>
    <string name="address_name">지번&#160;)&#160;</string>
    <string name="road_address_name">도로명&#160;)&#160;</string>
    <string name="place_url_title">링크</string>
    <string name="place_url">https://www.kakao.com</string>
    <string name="distance">거리</string>
    <string name="phone_number_text">010-0000-0000</string>
    <string name="text">TextView</string>

    <string name="search_filter">증상 혹은 부위를 선택해 주세요</string>

    <!-- Detail Dialog -->
    <string name="enterprise">업체명</string>
    <string name="effect">효능/효과</string>
    <string name="no_content">내용없음</string>
    <string name="instructions">복용법</string>
    <string name="warning">주의사항</string>
    <string name="caution">경고사항</string>
    <string name="interaction">상호작용</string>
    <string name="sideEffect">부작용</string>
    <string name="storingMethod">저장 방법</string>

    <!-- TimePicker Dialog -->
    <string name="alarm_settings">알림 시간 설정하기</string>

    <!-- Cycle -->
    <string name="cycle">약 먹는 주기</string>
    <string name="cycle_alarm_add">알림 추가하기</string>

    <!-- Form -->
    <string name="form">약 모형</string>

    <!-- Map -->
    <string name="view_more">더 불러오기</string>
    <string name="view_close">닫기</string>
    <string name="map_research">현 위치에서 재검색</string>

    <!-- Name -->
    <string name="medicine_name_explanation">복용하는 약 종류\n및 이름을 작성하세요</string>
    <string name="hint_medicine_name">입력해주세요</string>
    <string name="medicine_guide">약 등록 안내</string>
    <string name="medicine_guide_particular">· 약 제형을 선택한 후, 약 이름을 입력해주세요\n· 같은 시간대에 복용하는 약은 ‘+’ 버튼으로 추가하세요.\n· ‘다음’ 버튼을 눌러 날짜와 시간을 설정하세요.</string>

    <!-- Search -->
    <string name="hint_search">검색어를 입력해 주세요.</string>

    <!-- Take -->
    <string name="today_date">2024년 9월 3일</string>

    <!-- User -->
    <string name="my_info">내 정보</string>
    <string name="my_name">로그인이 필요합니다</string>
    <string name="my_login">로그인 설정</string>
    <string name="my_logout">로그아웃</string>
    <string name="my_terms">서비스 이용 약관</string>
    <string name="favorite_pharmacy">즐겨찾기한 약국</string>

    <!-- Item Feed -->

    <!-- Terms -->
    <string name="terms_title">서비스 이용 약관</string>
    <string name="terms_title_1">제 1조 목적</string>
    <string name="terms_1">이 약관은 약통 팀 (이하 "개발자")가 운영하는 모바일 애플리케이션인 약통 (이하 "애플리케이션")의 서비스 이용 및 제공에 관한 제반 사항의 규정을 목적으로 합니다.</string>
    <string name="terms_title_2">제 2조 용어의 정의</string>
    <string name="terms_2">이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n"서비스"라 함은 모바일 기기를 통하여 "이용자"가 이용할 수 있는 "개발자"가 제공하는 제반 서비스를 의미합니다.
        \n"이용자"란 "애플리케이션"에 접속하여 이 약관에 동의하여 "애플리케이션"이 제공하는 서비스를 이용하는 자를 의미합니다.
        \n"모바일 기기"란 콘텐츠를 다운로드 받거나 설치하여 사용할 수 있는 기기로서, 휴대폰, 스마트폰, 태블릿 등을 의미합니다.\n애플리케이션"이란 "개발자"가 제공하는 서비스를 이용하기 위해 "모바일 기기"를 통해 다운로드 받거나 설치하여 사용하는 프로그램 일체를 의미합니다.</string>
    <string name="terms_title_3">제 3조 약관의 효력 및 변경</string>
    <string name="terms_3">본 약관은 서비스 이용을 위한 애플리케이션 내에 본 약관을 명시하고, 이용자가 애플리케이션을 설치 및 실행함과 동시에 효력이 발생합니다.
        \n이용자는 본 약관에 동의하지 않으면 서비스를 이용할 수 없으며, 약관 동의 여부는 애플리케이션 내 저장됩니다.
        \n개발자는 불가피한 여건이나 사정이 있을 경우 「약관의 규제에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」 등 관련 법령에 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
        \n개발자가 약관을 개정할 경우에는 적용일자 및 개정 내용, 개정 사유 등을 명시하여 최소한 그 적용일 7일 이전부터 애플리케이션 내 또는 그 연결 화면에 게시하여 이용자에게 공지합니다.
        \n개발자가 약관을 개정할 경우 개정 약관 공지 후 개정약관의 적용에 대한 이용자의 동의 여부를 확인합니다. 개발자는 제 3항의 공지 또는 통지를 할 경우 이용자가 개정 약관에 대해 동의 또는 거부의 의사표시를 하지 않으면 동의한 것으로 볼 수 있다는 내용도 함께 공지 또는 통지를 하며
        , 이용자가 이 약관 시행일 까지 거부의 의사표시를 하지 않는다면 개정약관에 동의한 것으로 볼 수 있습니다.
        \n이용자가 개정 약관에 대해 동의하지 않는 경우 개발자 또는 이용자는 서비스 이용 계약을 해지하고 서비스를 이용하지 않을 수 있습니다.</string>
    <string name="terms_title_4">제 4조 개인정보 활용 고지</string>
    <string name="terms_4">서비스 이용 과정에서 아래와 같은 정보들이 자동으로 생성되어 수집될 수 있습니다.
        \n이미지 검색: 검색 형식, 검색한 이미지 데이터, 검색 날짜
        \n식별 검색 및 상세 정보 검색: 검색 형식, 검색 날짜</string>
    <string name="terms_title_5">제 5조 개인정보의 수집 방법</string>
    <string name="terms_5">애플리케이션은 검색 지원 서비스로서, 검색 시 발생하는 데이터 (검색 형식, 이미지 데이터, 검색 날짜)를 수집합니다.</string>
    <string name="terms_title_6">제 6조 수집한 개인정보의 이용</string>
    <string name="terms_6">애플리케이션은 수집된 데이터를 검색 정확도 및 서비스 개선을 위해 활용합니다.</string>
    <string name="terms_title_7">제 7조 이용자의 의무</string>
    <string name="terms_7">이용자는 개발자가 제공하는 서비스의 이용과 관련하여 다음에 해당하는 행위를 해서는 안 됩니다.
        \n개발자로부터 특별한 권리를 부여받지 않고 애플리케이션을 변경하거나, 애플리케이션에 다른 프로그램을 추가·삽입하거나, 서버를 해킹·역설계 하거나, 소스 코드나 애플리케이션 데이터를 변경하거나, 별도의 서버를 구축하거나, 애플리케이션의 일부분을 임의로 변경·도용하여 개발자를 사칭하는 행위
        \n그 밖에 관련 법령에 위반되거나 선량한 풍속 기타 사회 통념에 반하는 행위</string>
    <string name="terms_title_8">제 8조 책임의 한계 및 법적 고지</string>
    <string name="terms_8">애플리케이션은 식의약 데이터 포털의 "완제 의약품 허가 상세 데이터"와 "의약품 낱알식별정보 데이터"를 기반으로 검색 지원의 목적을 가진 정보를 제공합니다.
        \n애플리케이션은 정보의 정확성을 위해 노력하고 있으나, 정보의 정확성 및 신뢰성, 적법성에 대해 어떠한 보증도 하지 않으며 편집상의 오류, 허가 사항 변경, 추가적인 학술 연구 또는 임상 연구 발표 등으로 인해 발생하는 문제에 대해 개발자는 책임지지 않습니다.
        \n개발자는 애플리케이션 내 정보를 수정할 의무를 지지 않으나 필요에 따라 개선할 수 있습니다.
        \n애플리케이션은 "검색 지원 서비스"로서 서비스 및 정보와 관련하여 직접, 간접, 부수적, 징벌적, 파생적인 손해에 관해서 책임을 지지 않습니다.
        \n개발자는 "구체적인 약의 정보 및 복용"에 대해 애플리케이션 이용 시 이용자에게 "약사에게 확인할 것"을 고지하고 있으며, 이를 이용자가 확인하지 않아 발생한 사고에 대해서는 개발자는 책임을 지지 않습니다.</string>
    <string name="modifying_text">수정하기</string>
    <string name="remove_text">삭제하기</string>
    <string name="do_login_please_text">로그인이 필요한 서비스입니다. 로그인해주세요.</string>


    <!-- Open API -->
    <string name="data_go_kr">
        공공데이터포털 [https://www.data.go.kr/index.do]
    </string>
    <string name="e">
        e약은요 [https://www.data.go.kr/data/15075057/openapi.do#tab_layer_prcuse_exam]
    </string>
    <string name="selectApiDataDetailView">
        의약품 제품 허가정보 [https://www.data.go.kr/tcs/dss/selectApiDataDetailView.do?publicDataPk=15095677]
    </string>
    <string name="no_medicine_group">등록된 약이 없습니다!</string>
    <string name="knock_text">노크하기</string>
    <string name="default_notification_channel_id">fcm_channel</string>
    <string name="need_login_text">로그인이 필요한 서비스입니다.</string>
    <string name="no_friend_text">등록된 친구가 없습니다.</string>

</resources>