<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_take">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.blackcows.butakaeyak.ui.search.SearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.blackcows.butakaeyak.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" >
    </fragment>

    <fragment
        android:id="@+id/navigation_note"
        android:name="com.blackcows.butakaeyak.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" >
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.blackcows.butakaeyak.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
    </fragment>
</navigation>