<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomsheet_map_detail_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_white_20"
    android:paddingTop="8dp"
    android:paddingBottom="24dp"
    app:behavior_draggable="true"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/bottom_sheet_handle"
        android:layout_width="120dp"
        android:layout_height="4dp"
        android:alpha="0.5"

        android:background="@drawable/bottom_sheet_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomsheet_map_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/bottom_sheet_white_20"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_handle"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/distance"
            style="@style/caption_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/distance"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/place_name"
            style="@style/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="44dp"
            android:text="@string/place_name"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/distance" />

        <TextView
            android:id="@+id/phone_title"
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/place_name" />

        <TextView
            android:id="@+id/phone"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/phone_title" />

        <TextView
            android:id="@+id/address_title"
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/address_name_title"
            style="@style/body"
            android:layout_width="47dp"
            android:layout_height="24dp"
            android:text="@string/address_name"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/address_title" />

        <TextView
            android:id="@+id/road_address_name_title"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/road_address_name"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/address_name_title" />

        <TextView
            android:id="@+id/address_name"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            app:layout_constraintBottom_toBottomOf="@+id/address_name_title"
            app:layout_constraintStart_toEndOf="@+id/address_name_title"
            app:layout_constraintTop_toTopOf="@+id/address_name_title" />

        <TextView
            android:id="@+id/road_address_name"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            app:layout_constraintBottom_toBottomOf="@+id/road_address_name_title"
            app:layout_constraintStart_toEndOf="@+id/road_address_name_title"
            app:layout_constraintTop_toTopOf="@+id/road_address_name_title" />

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/place_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/distance"
            app:srcCompat="@drawable/icon_favorite" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_btn_call"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_long_rect_500"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_call"
            android:paddingHorizontal="12dp"
            android:text="@string/btn_call"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/road_address_name_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_btn_find_road"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/round_long_rect_500"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_map"
            android:paddingHorizontal="12dp"
            android:text="@string/btn_nav"
            app:layout_constraintBottom_toBottomOf="@+id/detail_btn_call"
            app:layout_constraintStart_toEndOf="@+id/detail_btn_call"
            app:layout_constraintTop_toTopOf="@+id/detail_btn_call" />

        <View
            android:id="@+id/bottom_sheet_padding_bar"
            android:layout_width="10dp"
            android:layout_height="8dp"
            app:layout_constraintStart_toStartOf="@+id/distance"
            app:layout_constraintTop_toBottomOf="@+id/detail_btn_call" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>